# goal-jax

./: .gitignore  CLAUDE.md  PUBLISHING-TODO.md  README.md  REVIEW-TODO.md  mkdocs.yml  pyproject.toml  results
.github/workflows/: demonstrations.yml  examples.yml  tests.yml  typecheck.yml
docs/: LICENSE  distributions.md  exponential_family.md  harmonium.md  index.md  linear.md  manifold.md
docs/exponential_family/: core.md  distributions.md  exponential_family.md
docs/geometry/: exponential_family.md  harmonium.md  hierarchical.md  linear.md  manifold.md  subspace.md
docs/geometry/exponential_family/: exponential_family.md  harmonium.md  hierarchical.md
docs/geometry/manifold/: linear.md  manifold.md  matrix.md  optimizer.md  subspace.md
docs/geometry/rep/: matrix.md
docs/harmonium/: core.md  harmonium.md  models.md
docs/models/: lgm.md  mixture.md  normal.md  univariate.md
docs/models/base/: categorical.md  poisson.md
docs/models/base/gaussian/: boltzmann.md  generalized.md  normal.md
docs/models/graphical/: hmog.md  lgm.md  mixture.md
docs/scripts/: graph_viz.py
docs/source/: conf.py  examples.rst  index.rst
docs/source/geometry/: index.rst
docs/source/geometry/exponential_family/: base.rst  combinators.rst  dynamical.rst  graphical.rst  harmonium.rst  hierarchical.rst  index.rst  protocols.rst  variational.rst
docs/source/models/: index.rst
docs/stylesheets/: extra.css
docs/transforms/: linear.md  matrix.md
examples/: default.mplstyle  mixture.py  shared.py  univariate.py
examples/benchmarks/mnist/: common.py  hmog_alg.py  models.py  run.py  scipy_alg.py
examples/binomial_bernoulli_mixture/: __init__.py  plot.py  run.py  types.py
examples/binomial_bernoulli_mnist/: plot.py  run.py  types.py
examples/binomial_bernoulli_mnist_old/: ANALYTICAL_RHO_REPORT.md  __init__.py  analytical_rho.py  init_diagnostics.py  plot.py  run.py  run_analytical.py  sweep.py  types.py
examples/binomial_rbm_mnist/: __init__.py  approximate_conjugation.py  plot.py  run.py  types.py
examples/bivariate/: common.py  plot.py  run.py
examples/bivariate_normal/: plot.py  run.py  types.py
examples/boltzmann/: plot.py  run.py  types.py
examples/boltzmann_cd/: plot.py  run.py  types.py
examples/boltzmann_hmog_moons/: plot.py  run.py  types.py
examples/boltzmann_lgm/: plot.py  run.py
examples/boltzmann_lgm_cd/: __init__.py  plot.py  run.py
examples/com_based_mixture/: plot.py  run.py  types.py
examples/demonstrations/bivariate_normal/: plot.py  run.py
examples/demonstrations/com_based_mixture/: plot.py  run.py  types.py
examples/demonstrations/dimensionality_reduction/: plot.py  run.py
examples/demonstrations/hmog/: plot.py  run.py
examples/demonstrations/mixture_of_gaussians/: plot.py  run.py
examples/demonstrations/univariate_analytic/: plot.py  run.py
examples/demonstrations/univariate_differentiable/: plot.py  run.py  types.py
examples/demonstrations/univariate_forward/: run.py  types.py
examples/demonstrations/univariate_models/: run.py
examples/dimensionality_reduction/: common.py  plot.py  run.py  types.py
examples/gaussian_boltzmann/: plot.py  run.py  types.py
examples/gaussian_markov_chain/: plot.py  run.py  types.py
examples/hierarchical_mixture_of_gaussians/: common.py  plot.py  run.py
examples/hierarchical_vi_harmonium/: __init__.py  core.py  plot.py  run.py  training.py  types.py
examples/hmm/: plot.py  run.py  types.py
examples/hmog/: plot.py  run.py  types.py
examples/kalman_filter/: plot.py  run.py  types.py
examples/mfa/: plot.py  run.py  types.py
examples/mixture-of-gaussians/: common.py  run.py
examples/mixture_of_gaussians/: common.py  plot.py  run.py  types.py
examples/multivariate/: plot.py  run.py  types.py
examples/pendulum/: plot.py  run.py  types.py
examples/poisson_mixture/: plot.py  run.py  types.py
examples/poisson_rbm_mnist/: __init__.py  approximate_conjugation.py  plot.py  run.py  types.py
examples/population_codes/: __init__.py  plot.py  run.py  types.py
examples/rbm_mnist/: __init__.py  approximate_conjugation.py  plot.py  run.py  types.py
examples/structured_vi_harmonium/: __init__.py  core.py  plot.py  run.py  training.py  types.py
examples/torus_poisson/: __init__.py  plot.py  run.py  types.py
examples/univariate/: common.py  plot.py  run.py
examples/univariate_analytic/: plot.py  run.py
examples/univariate_differentiable/: plot.py  run.py  types.py
examples/univariate_models/: plot.py  run.py  types.py
examples/variational_mnist/: __init__.py  diag_analyze.py  diag_compare.py  diag_plot.py  diag_postmortem.py  diag_stability.py  diagnose.py  evaluate.py  hierarchical_results.md  hyperparam_results.md  model.py  plot.py  train.py
goal/: distributions.py  exponential_family.py  harmonium.py  linear.py  manifold.py
src/goal/: __init__.py  harmonium.py  linear.py  manifold.py
src/goal/exponential_family/: __init__.py  core.py  distributions.py  exponential_family.py
src/goal/geometry/: __init__.py  exponential_family.py  graphical.py  harmonium.py  hierarchical.py  linear.py  manifold.py  optimization.py  optimizer.py  subspace.py
src/goal/harmonium/: __init__.py  core.py  harmonium.py  models.py
src/goal/models/: __init__.py  com_poisson.py  hmog.py  lgm.py  linear_gaussian_model.py  mixture.py  normal.py  univariate.py  von_mises.py
src/goal/transforms/: __init__.py  linear.py  matrix.py
tests/: bernoulli.py  binomial.py  binomial_bernoulli_mixture.py  bivariate.py  boltzmann.py  boltzmann_hmog.py  boltzmann_lgm.py  categorical.py  conversions.py  dirichlet.py  dynamical.py  from_natural.py  gaussian.py  graphical_mixture.py  hmog.py  jit.py  lgm.py  linear.py  linear_gaussian_model.py  manifold.py  map.py  matrix.py  mixture_of_conjugated.py  normal.py  poisson.py  population_codes.py  rbm.py  round_5.py  round_6.py  test_bernoulli.py  test_binomial_harmonium.py  test_boltzmann.py  test_categorical.py  test_dynamical.py  test_graphical_mixture.py  test_hierarchical.py  test_lgm.py  test_matrix.py  test_normal.py  test_poisson.py  (+8 more)
(+113 files in other folders)
