[project]
name = "goal-jax"
version = "0.1.0"
description = "(G)eometric (O)ptimiz(A)tion (L)ibraries"
requires-python = ">=3.12"
dependencies = [
    "jax",
    "optax",
]
readme = "README.md"
license = {text = "LICENSE"}
authors = [
    {name = "Sacha Sokoloski", email = "alex404@mailbox.org"},
]
keywords = ["jax", "information-geometry", "exponential-families", "optimization", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/alex404/goal-jax"
Documentation = "https://goal-jax.readthedocs.io/"
Repository = "https://github.com/alex404/goal-jax"
Issues = "https://github.com/alex404/goal-jax/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

examples = [
    "matplotlib",
    "scipy",
    "scikit-learn",
    "scipy-stubs",
    "seaborn",
]

gpu = [
    "jax[cuda12]",
]

docs = [
    "sphinx",
    "furo",
    "sphinx-copybutton",
    "sphinx-math-dollar",
    "myst-parser",
    "graphviz",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include =["goal*"]

[tool.setuptools.package-data]
goal = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
include = ["src/goal", "examples", "tests"]
extraPaths = ["src"]
typeCheckingMode = "recommended"

# External library typing issues - incomplete type stubs in JAX/optax/scipy
reportMissingTypeStubs = "none"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"

# Intentional use of Any to work around Python type system limitations
# (e.g., covariance/contravariance in generics, Self type inference in overrides)
reportAny = "none"
reportExplicitAny = "none"

# Matplotlib methods return values that are intentionally unused
reportUnusedCallResult = "none"

# JAX lambda type inference limitations
reportUnknownLambdaType = "none"

# Test files use pytest fixtures where parameter types can be inferred
reportMissingParameterType = "none"

[tool.ruff]
src = ["src"]
output-format="concise"
exclude = ["node_modules", "__pycache__"]
lint.select = [
    "F",  # Pyflakes
    "E",  # PEP8
    "W",  # PEP8
    "C90",  # McCabe
    "D",  # Pydocstyle
    "R",  # Ruff-specific
    "N",  # Naming
    "I",  # Import conventions
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
    "RUF",  # ruff-specific rules
    "ARG",  # flake8-unused-arguments
    "TRY",  # tryceratops
    "PLR0402", # import a.b as b -> from a import b
]

lint.ignore = [
    "E501",  # Example: Ignore line length warnings
    "D",     # Ignore all docstring-related warnings
    "ARG002",# Ignore unused-argument in method > problematic eg when required by parent class / interface
    "ARG003",# Unused parameters
    "TRY003",# Allow to write exception messages in place instead of subclassing
    "F722",  # spurious errors because of jaxtyping
]

[tool.ruff.format]
docstring-code-format = true
